--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <div class="wrap-form">
+      <form class="form">
+        <input
+          type="text"
+          name="gallery"
+          id="gallery"
+          placeholder="Search images..."
+        />
+        <button>Search</button>
+      </form>
+    </div>
+    <div class=""></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
