--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
       <form class="form">
         <input
           type="text"
-          name="gallery"
-          id="gallery"
+          name="valueGallery"
+          id="valueGallery"
           placeholder="Search images..."
         />
         <button>Search</button>
       </form>
     </div>
-    <div class=""></div>
+    <div class="gallery"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
