--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <button>Search</button>
       </form>
     </div>
-    <div class="gallery"></div>
+    <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
