--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <button class="form-button" type="submit">Search</button>
         </form>
       </div>
-      <span class="loader">Loading images, please wait...</span>
+      <span class="loader"></span>
       <ul class="gallery"></ul>
     </div>
     <script type="module" src="./main.js"></script>
